# tritfabric

./: .gitignore  CHANGELOG.md  Dockerfile.server  Dockerfile.sse  Dockerfile.tools  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  pyproject.toml  pytest.ini  requirements-train.txt  requirements.txt
atlas/: autonomy_gate.py  community_api.py  daemon.py  gpu-catalog.v1.json  gpu_broker.py  http_api.py  policy.py  ray_runner.py  ray_train_lora.py  registry.py  trit_status.py
cli/: tritfabricctl.py
configs/: autonomy-ladder.canonical.json  autonomy-ladder.yaml  policy.yaml
docs/: ARCHITECTURE.md  INTEGRATION_MAP.md  MODEL_INTEGRATION.md  MPCC_RELATIONSHIP.md  NAMING_LEDGER.md  OPERATOR_RUNBOOK.md  OPT_IN.md  ORG_PLACEMENT.md  TRITRPC_ALIGNMENT.md
gateways/: sse_gateway.py
integrations/: README.md
integrations/human-digital-twin-main/: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
integrations/human-digital-twin-main/capd/: di-eval.capd.json
integrations/human-digital-twin-main/docs/: best_practices.md  theory.md
integrations/human-digital-twin-main/human_digital_twin/api/policies/opa/: omega.rego  repair.rego
integrations/human-digital-twin-main/human_digital_twin/api/schemas/: kfs-eval.json
integrations/human-digital-twin-main/human_digital_twin/api/services/: ieml.py  world_weights.py
integrations/human-digital-twin-main/human_digital_twin/api/services/eval/: omega.py
integrations/human-digital-twin-main/human_digital_twin/api/trpc/: devine.trpc.yaml  server_shim.py
integrations/human-digital-twin-main/human_digital_twin/tools/pathflows/: runner.py
integrations/human-digital-twin-main/tests/: test_omega.py  test_schema.py
integrations/human-digital-twin-main/tools/pathflows/: examples.yaml
(+390 files in other folders)
